--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -11,5 +11,5 @@ html,
 body {
   /* font-family: 'Prompt', sans-serif; */
   margin: 0;
-  background-color: white;
+  /* background-color: white; */
 }
