--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Palanquin:wght@100;200;300;400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Palanquin:wght@100;200;300;400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Maitree&family=Mitr:wght@600&family=Prompt:wght@800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@300;400&display=swap');
 html {
   @apply antialiased min-h-full;
   scroll-behavior: smooth;
@@ -17,6 +18,9 @@ html {
 }
 .font-prompt {
   font-family: 'Prompt', sans-serif;
+}
+.font-noto {
+  font-family: 'Noto Sans Thai', sans-serif;
 }
 html,
 body {
